[tool.poetry]
name = "sample-post api"
version = "0.1.0"
description = ""
authors = ["Denson Abraham <densonabraham98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
